crates/alder-solve/tests/snapshots/inference__explicit_async_trait_contract_adds_task.snap
---
source: crates/alder-solve/tests/inference.rs
description: "trait Load[a] { async fn load(value: a) Number }\nimpl Load[Number] { async fn load(value: Number) Number { value } }\nfn start() Task[Number] { load(42) }\n"
---
start: fn() Task[Number]
