crates/alder-solve/tests/snapshots/inference__explicit_async_without_await_adds_task.snap
---
source: crates/alder-solve/tests/inference.rs
description: "async fn answer() Number { 42 }"
---
answer: fn() Task[Number]
