crates/alder-solve/tests/snapshots/inference__explicit_return_unifies_with_declared_result.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn choose(flag: Bool) -> Number {\n    if flag { return 1 }\n    return 2\n}\n"
---
choose: fn(Bool) -> Number
