crates/alder-solve/tests/snapshots/inference__general_pattern_equivalent_bigint_literals_are_redundant.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: BigInt) Number {\n    match value { 0x10000000000000000n => 0, 18446744073709551616n => 1, _ => 2 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 46,
            },
            end: Position {
                line: 2,
                column: 67,
            },
        },
        kind: RedundantPattern {
            covering: [
                Region {
                    start: Position {
                        line: 2,
                        column: 19,
                    },
                    end: Position {
                        line: 2,
                        column: 39,
                    },
                },
            ],
        },
        expectation: None,
    },
]
