crates/alder-solve/tests/snapshots/inference__general_pattern_failed_guard_can_invalidate_earlier_record_coverage.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: { flag: Bool }) Number {\n    match value {\n        { flag: true } => 0,\n        _ if {\n            value.flag = true\n            false\n        } => 1,\n        { flag: false } => 2,\n    }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 9,
                column: 6,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "{ flag: true }",
            ],
        },
        expectation: None,
    },
]
