crates/alder-solve/tests/snapshots/inference__general_pattern_guard_does_not_complete_boolean_coverage.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn render(value: Bool, guard: Bool) Number {\n    match value { true if guard => 0, false => 1 }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 5,
            },
            end: Position {
                line: 2,
                column: 51,
            },
        },
        kind: NonExhaustiveMatch {
            missing: [
                "true",
            ],
        },
        expectation: None,
    },
]
